Don't collapse columns with large-offset (fix #307)

--- a/scss/grid/_grid.scss
+++ b/scss/grid/_grid.scss
@@ -69,13 +69,15 @@ th.column {
   padding-bottom: $column-padding-bottom;
 
   // Prevents Nested columns from double the padding
-  .column,
-  .columns {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
+  @for $i from 1 through ($grid-column-count - 1) {
+    .column:not(.large-offset-#{$i}),
+    .columns:not(.large-offset-#{$i}) {
+      padding-left: 0 !important;
+      padding-right: 0 !important;
 
-    center {
-      min-width: none !important;
+      center {
+        min-width: none !important;
+      }
     }
   }
 }
